# aura-harness

./: .commit-msg.tmp  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.render  README.md  deny.toml  index.html
aura-automaton/: Cargo.toml
aura-automaton/src/: context.rs  events.rs  handle.rs  lib.rs  runtime.rs  schedule.rs  types.rs
aura-automaton/src/builtins/: chat.rs  dev_loop.rs  mod.rs  spec_gen.rs  task_run.rs
crates/aura-agent/: Cargo.toml
crates/aura-agent-kernel/: Cargo.toml
crates/aura-agent-kernel/src/: billing.rs  lib.rs  replay.rs  spawn_hook.rs
crates/aura-agent-kernel/src/context/: mod.rs  tests.rs
crates/aura-agent-kernel/src/kernel/: mod.rs  process.rs  reason.rs  stream.rs  tests.rs
crates/aura-agent-kernel/src/policy/: config.rs  mod.rs
crates/aura-agent-kernel/tests/: invariant_determinism.rs  replay_round_trip.rs
crates/aura-agent-steering/: Cargo.toml
crates/aura-agent-steering/src/: early_oracle.rs  helpers.rs  implement_now.rs  inject.rs  lib.rs  registry.rs  repeated_read.rs  types.rs
crates/aura-agent-steering/src/registry/: registry_tests.rs
crates/aura-agent/src/: agent_runner.rs  budget.rs  build.rs  console.rs  constants.rs  dup_audit.rs  event_sequence_tests.rs  events.rs  git.rs  helpers.rs  kernel_domain_gateway.rs  kernel_executor.rs  kernel_gateway.rs  lib.rs  message_conversion.rs  parser.rs  planning.rs  policy.rs  recording_stream.rs  sanitize.rs  self_review.rs  session_bootstrap.rs  shell_parse.rs  store_migration_tests.rs  task_context.rs  task_executor.rs  turn_config.rs  types.rs
crates/aura-agent/src/agent_loop/: compaction_summary.rs  config.rs  context.rs  contract_tests.rs  cutover_tests.rs  cx.rs  iteration.rs  mod.rs  parity_tests.rs  pipeline_tests.rs  run.rs  sampling.rs  search_cache.rs  shamir_replay_tests.rs  state.rs  stop_reason.rs  stream_pump.rs  streaming.rs  streaming_tests.rs  task.rs  tests.rs  tests_advanced.rs  text_sanitize.rs  tool_execution.rs  tool_execution_tests.rs  tool_pipeline.rs  tool_processing.rs  transport.rs  turn.rs  turn_diff.rs
crates/aura-agent/src/agent_runner/: mod.rs  tests.rs
crates/aura-agent/src/blocking/: detection.rs  mod.rs  stall.rs
crates/aura-agent/src/compaction/: mod.rs  tests.rs
crates/aura-agent/src/events/: mapper.rs  mod.rs  tests.rs  types.rs  wire.rs
crates/aura-agent/src/file_ops/: apply.rs  error_context.rs  mod.rs  source_parser.rs  stub_detection.rs  task_keywords.rs  task_relevance.rs  type_resolution.rs
crates/aura-agent/src/kernel_domain_gateway/: handle.rs  mod.rs  routes.rs  tests.rs  wire.rs
crates/aura-agent/src/prompt_resolve/: mod.rs
crates/aura-agent/src/prompts/: context.rs  (+5 more)
crates/aura-automaton/: Cargo.toml
crates/aura-automaton/src/: context.rs  error.rs  events.rs  handle.rs  lib.rs  metadata.rs  runtime.rs  state.rs  types.rs
crates/aura-context-memory/: Cargo.toml
crates/aura-context-memory/src/: concurrency_tests.rs  consolidation.rs  extraction.rs  lib.rs  manager.rs  procedure_tests.rs  procedures.rs  refinement.rs  retrieval.rs  retriever_tests.rs  salience.rs  store.rs  turn_summary.rs  types.rs  write_pipeline.rs
crates/aura-context-memory/tests/: turn_summary_roundtrip.rs
crates/aura-domain-http/: Cargo.toml
crates/aura-domain-http/src/: http.rs  jwt.rs  lib.rs
crates/aura-engine/: Cargo.toml
crates/aura-engine/src/: capabilities.rs  child_kernel.rs  child_runner.rs  executor.rs  lib.rs  memory_observer.rs  scheduler.rs  worker.rs
crates/aura-fleet-dispatch/: Cargo.toml
crates/aura-fleet-dispatch/src/: lib.rs
crates/aura-fleet-quota/: Cargo.toml
crates/aura-fleet-quota/src/: lib.rs
crates/aura-fleet-quota/tests/: quota_depth_exceeded.rs  quota_too_many_concurrent.rs
crates/aura-fleet-registry/: Cargo.toml
crates/aura-fleet-registry/src/: lib.rs
crates/aura-kernel/: Cargo.toml
crates/aura-kernel/src/: billing.rs  context.rs  executor.rs  kernel.rs  lib.rs  policy.rs  router.rs  spawn_hook.rs
crates/aura-kernel/tests/: invariant_determinism.rs  invariant_policy_matrix.rs
crates/aura-memory/: Cargo.toml
crates/aura-memory/src/: consolidation.rs  consolidator_tests.rs  error.rs  extraction.rs  lib.rs  manager.rs  manager_tests.rs  pipeline_tests.rs  procedures.rs  refinement.rs  retrieval.rs  salience.rs  store.rs  store_tests.rs  types.rs  write_pipeline.rs
crates/aura-protocol/: Cargo.toml
crates/aura-protocol/bindings/: AgentIdentityWire.ts  AgentPermissionsWire.ts  AgentScopeWire.ts  AgentToolPermissionsWire.ts  AssistantMessageEnd.ts  CapabilityWire.ts  GenerationRequest.ts  InboundMessage.ts  InstalledTool.ts  InstalledToolIntegrationRequirement.ts  OutboundMessage.ts  SessionInit.ts  SessionModelOverrides.ts  SessionReady.ts  SessionUsage.ts  ToolInfo.ts  ToolResultMsg.ts  UserMessage.ts
crates/aura-protocol/src/: chat_project_info.rs  client.rs  conversions.rs  installed.rs  lib.rs  permissions.rs  runtime_request.rs  server.rs
crates/aura-session/: Cargo.toml
crates/aura-session/src/: lib.rs
crates/aura-skills/: Cargo.toml
crates/aura-skills/src/: activation.rs  error.rs  install.rs  integration_tests.rs  lib.rs  loader.rs  manager.rs  parser.rs  prompt.rs  registry.rs  types.rs
crates/aura-store/: Cargo.toml
crates/aura-store-record/: Cargo.toml
crates/aura-store-record/src/: kind.rs  lib.rs  log.rs  payload.rs  record.rs  tests.rs
crates/aura-store-snapshot/: Cargo.toml
crates/aura-store-snapshot/src/: lib.rs
crates/aura-store/src/: error.rs  lib.rs  rocks_store.rs  store.rs
crates/aura-store/tests/: invariant_atomicity.rs  invariant_readstore_surface.rs
crates/aura-terminal/: Cargo.toml
crates/aura-terminal/src/: events.rs  lib.rs  terminal.rs  ws.rs
crates/aura-tools/: Cargo.toml
crates/aura-tools/docs/: super-agent-tool-inventory.md
crates/aura-tools/src/: automaton_tools.rs  catalog.rs  config.rs  definitions.rs  error.rs  executor.rs  external.rs  http_tool.rs  installer.rs  intent_classifier.rs  lib.rs  permissions.rs  registry.rs  resolver.rs  resolver_tests.rs  sandbox.rs  schema.rs  tool.rs
(+724 files in other folders)
