[package]
name = "aura"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-terminal = { path = "crates/aura-terminal" }
aura-core = { path = "crates/aura-core" }
aura-kernel = { path = "crates/aura-kernel" }
aura-store = { path = "crates/aura-store" }
aura-reasoner = { path = "crates/aura-reasoner" }
aura-tools = { path = "crates/aura-tools" }
aura-agent = { path = "crates/aura-agent" }
aura-memory = { path = "crates/aura-memory" }
aura-auth = { path = "crates/aura-auth" }
aura-node = { path = "crates/aura-node" }
anyhow = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rpassword = "5.0"
dirs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = "0.15.7"
axum = { workspace = true }
tower-http = { workspace = true }
tokio-util = { workspace = true }

[workspace]
resolver = "2"
members = [
    "crates/aura-core",
    "crates/aura-store",
    "crates/aura-tools",
    "crates/aura-reasoner",
    "crates/aura-kernel",
    "crates/aura-terminal",
    "crates/aura-cli",
    "crates/aura-agent",
    "crates/aura-auth",
    "crates/aura-automaton",
    "crates/aura-node",
    "crates/aura-protocol",
    "crates/aura-memory",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"
license = "MIT"
repository = "https://github.com/aura/aura_os"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Hashing
blake3 = "1.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Storage
rocksdb = "0.22"

# Concurrency
dashmap = "5.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Testing
tempfile = "3.10"
proptest = "1.4"
tokio-tungstenite = "0.26"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# Futures
futures-util = "0.3"

# Bytes
bytes = "1.5"

# Hex encoding
hex = "0.4"

# Base64 encoding
base64 = "0.22"

# Directories
dirs = "5.0"

[dev-dependencies]
aura-node = { path = "crates/aura-node", features = ["test-support"] }
aura-core = { path = "crates/aura-core" }
aura-protocol = { path = "crates/aura-protocol" }
serde_json = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
bytes = { workspace = true }
futures = "0.3"
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
