[package]
name = "aura-agent-kernel"
description = "Deterministic kernel for Aura (agent layer, Phase 6a)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core-types = { path = "../aura-core-types" }
aura-core-modes = { path = "../aura-core-modes" }
aura-exec-traits = { path = "../aura-exec-traits" }
aura-store-db = { path = "../aura-store-db" }
aura-store-record = { path = "../aura-store-record" }
aura-store-snapshot = { path = "../aura-store-snapshot" }
aura-model-reasoner = { path = "../aura-model-reasoner" }
aura-plugin-hooks = { path = "../aura-plugin-hooks" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
