[package]
name = "aura-automaton"
description = "Automaton lifecycle, scheduling, and built-in automaton types for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-agent = { path = "../aura-agent" }
aura-config = { path = "../aura-config" }
aura-context-prompts = { path = "../aura-context-prompts" }
aura-core-types = { path = "../aura-core-types" }
aura-tools = { path = "../aura-tools" }
aura-model-reasoner = { path = "../aura-model-reasoner" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
