[package]
name = "aura-engine"
description = "Aura runtime orchestration engine — scheduler, worker, automaton bridge, memory observer, child runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core-types = { path = "../aura-core-types" }
aura-protocol = { path = "../aura-protocol" }
aura-store-db = { path = "../aura-store-db" }
aura-tools = { path = "../aura-tools" }
aura-model-reasoner = { path = "../aura-model-reasoner" }
aura-agent-kernel = { path = "../aura-agent-kernel" }
aura-agent = { path = "../aura-agent" }
aura-agent-loop = { path = "../aura-agent-loop" }
aura-exec-runner = { path = "../aura-exec-runner" }
aura-agent-subagent = { path = "../aura-agent-subagent" }
aura-context-memory = { path = "../aura-context-memory" }
aura-automaton = { path = "../aura-automaton" }
aura-context-compaction = { path = "../aura-context-compaction" }
aura-context-prompts = { path = "../aura-context-prompts" }
aura-fleet-spawn = { path = "../aura-fleet-spawn" }
# Phase C / Commit 4: the JWT-injecting `DomainApi` wrapper moved
# into `aura-domain-http` alongside the HTTP impl. The automaton
# bridge imports `JwtDomainApi` from there.
aura-domain-http = { path = "../aura-domain-http" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
insta = { workspace = true }

# Phase B / Commit 3: the engine pulls in aura-prompts + aura-compaction
# transitively through the agent loop wiring inside `worker.rs` and
# `scheduler.rs`. Cargo-machete sometimes can't see those uses because
# they're routed through the public agent-loop surface; pin the deps
# so the deny-warnings lint doesn't trip on the indirect edges.
[package.metadata.cargo-machete]
ignored = ["aura-context-prompts", "aura-context-compaction"]

[lints]
workspace = true
