[package]
name = "aura-fleet-dispatch"
description = "Fleet-layer agent-job dispatcher (Phase 7a — single source adapter; Phase 7b adds mailbox)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-core-modes = { path = "../aura-core-modes" }
aura-fleet-spawn = { path = "../aura-fleet-spawn" }
async-trait = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
