[package]
name = "aura-kernel"
description = "Deterministic kernel for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-reasoner = { path = "../aura-reasoner" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
hex = "0.4"
bytes = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
