[package]
name = "aura-memory"
description = "Per-agent memory and procedural knowledge system for Aura"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-store = { path = "../aura-store" }
aura-reasoner = { path = "../aura-reasoner" }
aura-agent = { path = "../aura-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rocksdb = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
aura-kernel = { path = "../aura-kernel" }

[lints]
workspace = true
