[package]
name = "aura-protocol"
description = "Shared wire protocol types for the Aura harness WebSocket API"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { version = "10", optional = true }

[features]
typescript = ["ts-rs"]

[lints]
workspace = true
