[package]
name = "aura-session"
description = "Shared session wiring for AURA entry points"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-agent = { path = "../aura-agent" }
aura-auth = { path = "../aura-auth" }
aura-store = { path = "../aura-store" }
aura-kernel = { path = "../aura-kernel" }
aura-reasoner = { path = "../aura-reasoner" }
aura-tools = { path = "../aura-tools" }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
