[package]
name = "aura-store-record"
description = "Append-only record-log domain types and trait (Phase 2: extracted from aura-core / aura-kernel)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core-types = { path = "../aura-core-types" }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
blake3 = { workspace = true }

# Phase 9: `aura-core-types` is held as a forward-compat dep
# alongside `aura-core` so the Phase 10 record-side migration
# can land without manifest churn (cargo machete misses the
# Phase 2 transitional re-export path that lives inside
# aura-core today).
[package.metadata.cargo-machete]
ignored = ["aura-core-types"]

[lints]
workspace = true
