[package]
name = "aura-store"
description = "Phase 2 compatibility shell over aura-store-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-store-db = { path = "../aura-store-db" }

[features]
# Forward `test-support` to `aura-store-db` so existing call sites
# that pass `--features test-support` against `aura-store` continue
# to compile after the Phase 2 rename.
test-support = ["aura-store-db/test-support"]

[lints]
workspace = true
