[package]
name = "aura-terminal"
description = "Cyber-retro terminal UI library for AURA CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# TUI Framework
ratatui = { workspace = true }
crossterm = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization (for themes)
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Unicode display width
unicode-width = { workspace = true }

# Phase C / Commit 4: PTY WebSocket handler moved here from
# aura-runtime. Pulls in the axum WS types, base64, futures-util,
# portable-pty, `which` (for default-shell lookup on Windows), and
# `dirs` (for the default cwd) — same deps the file used in the
# previous home.
axum = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
portable-pty = { workspace = true }
dirs = { workspace = true }
which = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
