[package]
name = "aura-tools"
description = "Tool executor and registry for filesystem and command operations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-kernel = { path = "../aura-kernel" }
aura-reasoner = { path = "../aura-reasoner" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
glob = "0.3"
regex = "1.11"
reqwest = { workspace = true }
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
# Phase 5: enable cross-agent tools (spawn_agent, etc.) and capability-gated
# visibility. Forwards to `aura-kernel/agent_permissions` so policy checks
# stay in sync with tool registration.
agent_permissions = ["aura-kernel/agent_permissions"]

[lints]
workspace = true
