[package]
name = "aura-tools"
description = "Tool executor and registry for filesystem and command operations"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-kernel = { path = "../aura-kernel" }
aura-reasoner = { path = "../aura-reasoner" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
